--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -78,4 +78,5 @@ jobs:
         run: |
           cd iac
           terraform init 
+          terraform validate
           terraform apply -auto-approve
